# Wikidata-tools

./: .gitignore  README.md  compare.py  get_updates.py  nested_predicate.txt  new_entity_rdf.py  parse_ttl.py  pyproject.toml  requirements.txt  sample_result.txt  setup.py  sparql_updates.py  to_fix.js  ttl_compare.py
src/wikidata_update/: new_entity_rdf.py  sparql_updates.py  ttl_compare.py
test/: test_sparql_updates.py
test/wikidata_update/: test_ttl_compare.py
wikidata-updates/: get_updates.py  new_entity_rdf.py  sparql_updates.py  ttl_compare.py
