[tool.poetry]
name = "wikidata-tools"
version = "0.1.0"
description = "A tools to get Wikidata updates"
authors = ["Seyed Sina Azimi <sinaazm15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"