[tool.poetry]
name = "wikidata_update"
version = "0.1.0"
description = "A tool to get Wikidata updates"
authors = ["Seyed Sina Azimi <sinaazm15@gmail.com>"]

# ✅ Specify the correct package directory
packages = [{ include = "wikidata_update", from="src" }]

[tool.poetry.scripts]
wikidata_update = "wikidata_update.sparql_updates:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
rdflib = "*"
python-dateutil = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
